tests/baselines/reference/nullKeyword.errors.txt
nullKeyword.ts(1,1): error TS18050: The value 'null' cannot be used here.


==== nullKeyword.ts (1 errors) ====
    null.foo;
    ~~~~
!!! error TS18050: The value 'null' cannot be used here.